# rag-center

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  celery_app.py  main.py
app/api/: deps.py
app/core/: __init__.py  auth.py  config.py  error_codes.py  exceptions.py  logging.py  middleware.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  api_key.py  chunk.py  document.py  enums.py  knowledge_base.py  retrieval_log.py  tenant.py
app/observability/: langfuse_client.py
app/providers/: __init__.py
app/repositories/: __init__.py  api_key_repository.py  chunk_repository.py  document_repository.py  (+3 more)
docs/: tenant-onboarding.md
examples/: kb_settings.example.json
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
migrations/: env.py
scripts/: create_api_key.py  create_tenant.py  export_eval_cases_from_langfuse.py  reindex_knowledge_base.py  run_retrieval_eval.py  update_kb_settings.py  update_tenant_plan.py  verify_parser_12.py  verify_robustness_retrieve.py
tests/: test_api.py  test_auth.py  test_auth_api.py  test_documents_api.py  test_feedback.py  test_hybrid_search.py  test_id_generator.py  test_kb_crud_api.py  test_kb_settings_repo.py  test_knowledge_tree.py  test_logging.py  test_markdown_splitter.py  test_query_pipeline.py  test_rag_schema.py  test_rag_service.py  test_rerank.py  test_retrieve_robustness.py  test_tenant_plan.py  test_text_splitter.py
(+109 files in other folders)
