[project]
name = "rag-center"
version = "0.1.0"
description = "RAG capability center backend skeleton (knowledge base, sync indexing, retrieval augmentation)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "greenlet>=3.0",
    "alembic>=1.13",
    # psycopg3 supports both sync (alembic) and async (app) with the same driver name
    "psycopg[binary]>=3.1",
    "pgvector>=0.3.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    # Elasticsearch 8.x 异步客户端（BM25 关键词检索 / 混合检索）
    "elasticsearch[async]>=8.13,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
